@@ -1,3 +1,8 @@
+2000-08-04  Tristan Tarrant  <nadir@users.sourceforge.net>
+
+	* game.cc: wait_delay() now checks for events during delay, so that
+	long delays don't cause events to be ignored until the next call.
+
 2000-08-20  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* egg.cc,usecode.cc - Test'o Love somewhat works.
